# storage/api-docs/api-docs.json
@@ -1,113 +1,109 @@
 {
-    "swagger": "2.0",
+    "openapi": "3.0.0",
     "info": {
-        "title": "Swagger Integration with PHP Laravel",
-        "description": "Integrate Swagger in Laravel application",
+        "title": "FundooNotes API Documentation",
+        "description": "API documentation for FundooNotes application",
         "contact": {
-            "email": "amanvermame786@gmail.com"
+            "email": "admin@fundoonotes.com"
         },
         "version": "1.0.0"
     },
-    "host": "http://my-default-host.com",
-    "basePath": "",
-    "schemes": [
-        "http",
-        "https"
-    ],
     "paths": {
-        "api/login": {
+        "/api/register": {
             "post": {
-                "summary": "login",
-                "description": "login the user which email & password matched",
-                "parameters": [
-                    {
-                        "name": "{email}",
-                        "in": "path",
-                        "description": "Email",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "name": "{password}",
-                        "in": "path",
-                        "description": "Password",
-                        "required": true,
-                        "type": "string"
-                    }
+                "tags": [
+                    "Authentication"
                 ],
+                "summary": "Register a new user",
+                "description": "Register a new user account",
+                "operationId": "2f25885f3b6f61ca11724ec302d2e439",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "firstname",
+                                    "lastname",
+                                    "email",
+                                    "password",
+                                    "c_password"
+                                ],
+                                "properties": {
+                                    "firstname": {
+                                        "type": "string",
+                                        "maxLength": 25,
+                                        "example": "John"
+                                    },
+                                    "lastname": {
+                                        "type": "string",
+                                        "maxLength": 25,
+                                        "example": "Doe"
+                                    },
+                                    "email": {
+                                        "type": "string",
+                                        "format": "email",
+                                        "example": "john.doe@example.com"
+                                    },
+                                    "password": {
+                                        "type": "string",
+                                        "maxLength": 15,
+                                        "minLength": 8,
+                                        "example": "password123"
+                                    },
+                                    "c_password": {
+                                        "type": "string",
+                                        "maxLength": 15,
+                                        "minLength": 8,
+                                        "example": "password123"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
                 "responses": {
                     "200": {
-                        "description": "successful Login"
-                    },
-                    "204": {
-                        "description": "unauthoried user"
-                    },
-                    "406": {
-                        "description": "not acceptable"
-                    },
-                    "500": {
-                        "description": "internal server error"
-                    }
-                }
-            }
-        },
-        "api/register": {
-            "post": {
-                "summary": "register",
-                "description": "register the user for login",
-                "parameters": [
-                    {
-                        "name": "{firstname}",
-                        "in": "path",
-                        "description": "FirstName",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "name": "{lastname}",
-                        "in": "path",
-                        "description": "LastName",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "name": "{email}",
-                        "in": "path",
-                        "description": "Email",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "name": "{password}",
-                        "in": "path",
-                        "description": "Password",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "name": "{C_password}",
-                        "in": "path",
-                        "description": "Confirm Password",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "successful Register"
+                        "description": "Successful registration",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "properties": {
+                                                "token": {
+                                                    "type": "string"
+                                                },
+                                                "name": {
+                                                    "type": "string"
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
                     },
                     "201": {
-                        "description": "error with user"
+                        "description": "Validation error"
                     },
                     "406": {
-                        "description": "not acceptable"
+                        "description": "Not acceptable"
                     },
                     "500": {
-                        "description": "internal server error"
+                        "description": "Internal server error"
                     }
                 }
             }
         }
     },
-    "definitions": {}
+    "tags": [
+        {
+            "name": "Authentication",
+            "description": "Authentication"
+        }
+    ]
 }
